# backloop

./: .gitignore  CLAUDE-TODOS.md  CLAUDE.md  README.md  TASK.md  TODOS.md  TODOS.txt  index.html  mock-data.js  mock.html  pyproject.toml  review.html  server.py
skill/: SKILL.md
src/backloop/: __init__.py  api_router.py  comment_service.py  config.py  event_manager.py  file_watcher.py  git_service.py  mcp_server.py  mock_data.py  models.py  responses.py.rej  review_manager.py  review_session.py  server.py  version.py
src/backloop/api/: responses.py  review_router.py  router.py
src/backloop/mcp/: server.py
src/backloop/services/: mcp_service.py  review_service.py
src/backloop/static/css/: buttons.css  components.css  diff.css  main.css
src/backloop/static/js/: api.js  comments.js  diff-viewer.js  file-editor.js  main.js  websocket-client.js
src/backloop/static/templates/: review.html
src/backloop/utils/: settings.py  state_dir.py
src/loopback/: api_router.py  comment_service.py  event_manager.py  file_watcher.py  git_service.py  mcp_server.py  mock_data.py  models.py  responses.py  review_manager.py  review_session.py  server.py  settings.py  utils.py
src/loopback/api/: responses.py  router.py
src/loopback/static/css/: main.css
src/loopback/static/js/: comments.js  main.js
src/loopback/static/templates/: review.html
src/loopback/utils/: state_dir.py
src/reviewer/: __init__.py  api_router.py  comment_service.py  event_manager.py  git_service.py  mcp_server.py  models.py  review_manager.py  review_session.py  router.py  server.py  settings.py
tests/: conftest.py  test_api.py  test_e2e_integration.py  test_frontend.py  test_git_service.py  test_review_workflow.py
tests/manual/: test_server.py
